# pipeline_target_service

./: .gitignore  Dockerfile  config.yaml  pyproject.toml
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
plan/: CHANGELOG.md  error-log-agent-v2-spec.md
src/: config.py  main.py
src/api/: deps.py  routes.py
src/models/: __init__.py  file.py  pipeline.py  result.py
src/pipeline/: errors.py  manager.py
src/pipeline/stages/: analyze.py  preprocess.py  store.py  upload.py
src/services/: .___init__.py  db_client.py  minio_client.py  qwen_client.py
src/utils/: logging_config.py
